# argpppp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  TODO.md
.github/workflows/: builds.yml  cmake-multi-platform.yml  linux-builds.yml
cmake/: InstallArgpppp.cmake  VtgEnableWarnings.cmake  argpppp-config.cmake  argpppp-config.cmake.in  argppppConfig.cmake.in
src/: CMakeLists.txt
src/argpppp/: CMakeLists.txt  argpppp.cppm  callback.cppm  command_line_parser.cpp  command_line_parser.cppm  interval.cppm  of.cppm  option.cpp  option.cppm  option_error.cppm  option_handler.cppm  option_handler_result.cpp  option_handler_result.cppm  option_handlers.cppm  option_key.cpp  option_key.cppm  option_with_handler.cpp  option_with_handler.cppm  optional_string.cppm  options.cpp  options.cppm  parse_number.cppm  parser.cpp  parser.cppm  parser_old.cpp  parser_old.cppm  pf.cppm  range.cppm  set.cppm  short_name.cpp  short_name.cppm  signed_integral_argument_parser.cppm  string_to_floating_point_converter.cppm  string_to_integral_converter.cppm  value.cppm
src/argpppp_example/: CMakeLists.txt  argpppp_example.cpp
test/: CMakeLists.txt
test/argpppp_test/: CMakeLists.txt  argp_program_version_test.cpp
test/argpppp_unit_test/: CMakeLists.txt  argpppp_unit_test_utility.hpp  callback_test.cpp  command_line_parser_test.cpp  interval_test.cpp  new_api_test.cpp  of_test.cpp  option_handler_result_test.cpp  option_handlers_test.cpp  option_key_test.cpp  option_test.cpp  option_with_handler_test.cpp  optional_string_test.cpp  options_test.cpp  parse_number_test.cpp  parse_result_test.cpp  parser_test.cpp  parser_test_old.cpp  pf_test.cpp  set_test.cpp  short_name_test.cpp  signed_integral_argument_parser_test.cpp  string_to_floating_point_converter_test.cpp  string_to_integral_converter_test.cpp  value_test.cpp
